@@ -1,3 +1,12 @@
+1999-03-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* CompoundAction.m ([CompoundAction_c -_createActivity_:::]): Use 
+	setActivity: in non-Randomized case.
+
+	* ActionGroup.[hm] ([GroupIndex_c -setActivity:]): New method.
+
+	* Schedule.[hm] ([ScheduleIndex_c -setActivity:]): New method.
+
 1999-03-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* XActivity.m (Activity_c): Add phase tags.
